2011-08-22  Dimitri Glazkov  <dglazkov@chromium.org>

        [Chromium] Expand CPU/GPU/Skia/CG into a matrix in graphics_type.
        https://bugs.webkit.org/show_bug.cgi?id=66705

        Reviewed by Adam Barth.

        * Scripts/webkitpy/layout_tests/port/chromium.py: Added plumbing for CG graphics types.
        * Scripts/webkitpy/tool/servers/gardeningserver_unittest.py: Adjusted unit test.

2011-08-22  James Robinson  <jamesr@chromium.org>

        [chromium] Update builder names for chromium gpu bots due to CG switchover
        https://bugs.webkit.org/show_bug.cgi?id=66693

        Reviewed by Dirk Pranke.

        Update the port and builder names for the chromium mac gpu bots to
        account for the CG transition.

        * Scripts/webkitpy/layout_tests/port/builders.py:

2011-08-22  Dirk Pranke  <dpranke@chromium.org>

        fix the GPU bot names on the layout test dashboard
        https://bugs.webkit.org/show_bug.cgi?id=66697

        Reviewed by Dimitri Glazkov.

        * TestResultServer/static-dashboards/builders.js:

2011-08-22  Dimitri Glazkov  <dglazkov@chromium.org>

        garden-o-matic's relative time display should be updated regularly.
        https://bugs.webkit.org/show_bug.cgi?id=66682

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui.js: Moved Time to ui.Time, added code for regular updates.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui/notifications.js: Changed to use ui.Time.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/ui_unittests.js: Added tests.

2011-08-22  Xianzhu Wang  <wangxianzhu@chromium.org>

        Pass --makeargs of build-webkit to chromium linux builder
        https://bugs.webkit.org/show_bug.cgi?id=66361

        Reviewed by Tony Chang.

        * Scripts/build-webkit:
        * Scripts/webkitdirs.pm:
        (buildChromiumMakefile):