@@ -58,8 +58,8 @@ class TestRebaseline(unittest.TestCase):
 Retrieving results for chromium-cg-mac-snowleopard from Webkit Mac10.6 (CG).
     userscripts/another-test.html
     userscripts/images.svg
-Retrieving results for chromium-gpu-mac-leopard from Webkit Mac10.5 - GPU.
-Retrieving results for chromium-gpu-mac-snowleopard from Webkit Mac10.6 - GPU.
+Retrieving results for chromium-gpu-cg-mac-leopard from Webkit Mac10.5 (CG) - GPU.
+Retrieving results for chromium-gpu-cg-mac-snowleopard from Webkit Mac10.6 (CG) - GPU.
 Retrieving results for chromium-gpu-win-win7 from Webkit Win7 - GPU.
 Retrieving results for chromium-gpu-win-xp from Webkit Win - GPU.
 Retrieving results for chromium-linux-x86 from Webkit Linux 32.
